# enum-tags

./: .gitignore  Cargo.toml  README.md
libs/macros/: Cargo.toml
libs/macros/src/: lib.rs
libs/traits/: Cargo.toml
libs/traits/src/: lib.rs
src/: lib.rs
tests/: test.rs
