[package]
name = "enum-tags"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DenverLacey/enum-tags"
reamdme = "README.md"
exclude = ["./tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-tags-macros = { version = "0.1.0", path = "./libs/macros" }
enum-tags-traits = { version = "0.1.0", path = "./libs/traits" }
