[package]
name = "enum-tags-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.86", features = ["full", "extra-traits", "printing"] }
quote = "1.0.15"
enum-tags-traits = { path = "../traits" }

[lib]
proc-macro = true
