[package]
name = "enum-tags-traits"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DenverLacey/enum-tags"
reamdme = "../README.md"
description = "Traits for enum-tags crate."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
